--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,10 +9,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Silia Cronauer</title>
 </head>
-<!-- Nav bar -->
-<!-- Home,  Skills, Projects, Contact-->
 
+<!-- 
+Nav bar:
+Home,  Skills, Projects, Contact
+-->
+<ul class="nav justify-content-center">
+    <li class="nav-item">
+        <a class="nav-link" aria-current="page" href="#">Home</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Skills</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Projects</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link">Contact</a>
+    </li>
+</ul>
 
+<!-- Hero -->
 
 
 <!-- Footer -->
