--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,28 +8,41 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Silia Cronauer</title>
+    <!-- My stylesheet -->
+    <link rel="stylesheet" href="../CSS/stlye.css">
 </head>
+
+<!-- Logo -->
+
+
 
 <!-- 
 Nav bar:
 Home,  Skills, Projects, Contact
 -->
-<ul class="nav justify-content-center">
-    <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="#">Home</a>
+<ul class="nav justify-content-center align-items-baseline border-bottom border-dark">
+    <div class="logo-box">
+        <div class="letter1">S
+            <div class="letter2">C</div>
+        </div>
+    </div>
+    <li>
+        <a>Home</a>
     </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#">Skills</a>
+    <li>
+        <a>Skills</a>
     </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#">Projects</a>
+    <li>
+        <a>Projects</a>
     </li>
-    <li class="nav-item">
-        <a class="nav-link">Contact</a>
+    <li>
+        <a>Contact</a>
     </li>
 </ul>
 
 <!-- Hero -->
+
+<h1>Projects</h1>
 
 
 <!-- Footer -->
