hero + skills + footer (whithout content)

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,50 +8,131 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Silia Cronauer</title>
+    <!--Font Awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
     <!-- My stylesheet -->
     <link rel="stylesheet" href="../CSS/stlye.css">
 </head>
 
-<!-- Logo -->
-
-
-
-<!-- 
+<body>
+    <!-- 
+----------------------------------   
 Nav bar:
 Home,  Skills, Projects, Contact
+----------------------------------
 -->
-<ul class="nav justify-content-center align-items-baseline border-bottom border-dark">
-    <div class="logo-box">
-        <div class="letter1">S
-            <div class="letter2">C</div>
+
+    <div class="nav d-flex border-bottom border-dark align-items-baseline primary-nav">
+
+        <!-- Logo -->
+        <div class="logo-box">
+            <div class="letter1">S
+                <div class="letter2">C</div>
+            </div>
+        </div>
+
+        <!-- Nav-Items -->
+        <ul class="nav ms-5">
+            <li>
+                <a>Home</a>
+            </li>
+            <li>
+                <a>Skills</a>
+            </li>
+            <li>
+                <a>Projects</a>
+            </li>
+            <li>
+                <a>Contact</a>
+            </li>
+        </ul>
+    </div>
+
+
+    <!-- 
+---------------
+    Hero 
+---------------    
+-->
+    <div class="row d-flex justify-content-between border-bottom border-dark">
+        <div class="col-4 align-self-center ps-5">
+            <h1>Hi There!</h1>
+        </div>
+        <div class="hero col-6">
+            <img src="../images/IMG_2415.jpg" alt="">
         </div>
     </div>
-    <li>
-        <a>Home</a>
-    </li>
-    <li>
-        <a>Skills</a>
-    </li>
-    <li>
-        <a>Projects</a>
-    </li>
-    <li>
-        <a>Contact</a>
-    </li>
-</ul>
 
-<!-- Hero -->
+    <!-- 
+--------------------    
+    Services 
+--------------------    
+-->
+    <div class="container my-5">
+        <div class="row d-flex justify-content-between text-center">
+            <div class="col-4 px-4">
+                <h3>Web Design</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum odit in dolorem aspernatur maxime ab sit quasi reprehenderit eos iure.</p>
+            </div>
+            <div class="col-4 px-4">
+                <h3>Front-End Development</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum odit in dolorem aspernatur maxime ab sit quasi reprehenderit eos iure.</p>
+            </div>
+            <div class="col-4 px-4">
+                <h3>Back-End Development</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum odit in dolorem aspernatur maxime ab sit quasi reprehenderit eos iure.</p>
+            </div>
+        </div>
+    </div>
 
-<h1>Projects</h1>
+    <!-- 
+--------------------    
+    Projects 
+---------------------
+-->
 
 
-<!-- Footer -->
 
-<body>
+    <!--
+--------------------    
+    Contact
+--------------------
+-->
+
+    <!-- 
+-----------------
+Footer 
+-----------------
+-->
+    <div class="bg-black text-light py-4">
+        <div class="text-center">
+            <i class="fa-brands fa-instagram me-3"></i>
+            <i class="fa-brands fa-linkedin-in me-3"></i>
+            <i class="fa-brands fa-github me-3"></i>
+            <i class="fa-regular fa-envelope"></i>
+        </div>
+        <ul class="nav d-flex justify-content-center mt-3 small-text">
+            <li>
+                <a>Home</a> |
+            </li>
+            <li>
+                <a>Skills</a> |
+            </li>
+            <li>
+                <a>Projects</a> |
+            </li>
+            <li>
+                <a>Contact</a>
+            </li>
+        </ul>
+        <p class="text-center mt-5 small-text ">&copy; Silia Cronauer 2022</p>
+    </div>
+
+
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-
 </body>
 
 </html>
