--- a/HTML/index.html
+++ b/HTML/index.html
@@ -23,7 +23,7 @@ Home,  Skills, Projects, Contact
 ----------------------------------
 -->
 
-    <div class="nav d-flex border-bottom border-dark align-items-baseline primary-nav">
+    <div class="nav d-flex border-bottom border-dark align-items-baseline primary-nav sticky-top">
 
         <!-- Logo -->
         <div class="logo-box">
@@ -55,12 +55,12 @@ Home,  Skills, Projects, Contact
     Hero 
 ---------------    
 -->
-    <div class="row d-flex justify-content-between border-bottom border-dark">
-        <div class="col-4 align-self-center ps-5">
+    <div class="d-flex border-bottom border-dark justify-content-between">
+        <div class="col-4 align-self-center">
             <h1>Hi There!</h1>
         </div>
-        <div class="hero col-6">
-            <img src="../images/IMG_2415.jpg" alt="">
+        <div class="hero-image col-8">
+            <img src="../images/IMG_2415.jpg">
         </div>
     </div>
 
@@ -69,17 +69,20 @@ Home,  Skills, Projects, Contact
     Services 
 --------------------    
 -->
-    <div class="container my-5">
+    <div class="container service-box">
         <div class="row d-flex justify-content-between text-center">
-            <div class="col-4 px-4">
+            <div class="col-lg-4 col-sm-12 px-4">
+                <h2>01</h2>
                 <h3>Web Design</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum odit in dolorem aspernatur maxime ab sit quasi reprehenderit eos iure.</p>
             </div>
-            <div class="col-4 px-4">
+            <div class="col-lg-4 col-sm-12 px-4">
+                <h2>02</h2>
                 <h3>Front-End Development</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum odit in dolorem aspernatur maxime ab sit quasi reprehenderit eos iure.</p>
             </div>
-            <div class="col-4 px-4">
+            <div class="col-lg-4 col-sm-12 px-4">
+                <h2>03</h2>
                 <h3>Back-End Development</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum odit in dolorem aspernatur maxime ab sit quasi reprehenderit eos iure.</p>
             </div>
@@ -91,6 +94,40 @@ Home,  Skills, Projects, Contact
     Projects 
 ---------------------
 -->
+
+    <div class="container my-5">
+        <h3>Creative Portfolio</h3>
+        <!-- Grid -->
+        <div class="portfolio">
+            <div class="item">
+                <img src="../images/foodblog.jpg" alt="">
+                <div class="description">
+                    <p>Foodblog</p>
+                    <a href="">See Live Site</a>
+                </div>
+            </div>
+            <div class="item">
+                <img src="../images/foodblog.jpg" alt="">
+            </div>
+            <div class="item">
+                <img src="../images/foodblog.jpg" alt="">
+            </div>
+
+
+
+
+            <div class="item">
+                <img src="../images/foodblog.jpg" alt="">
+            </div>
+            <div class="item">
+                <img src="../images/foodblog.jpg" alt="">
+            </div>
+            <div class="item">
+                <img src="../images/foodblog.jpg" alt="">
+            </div>
+
+        </div>
+    </div>
 
 
 
@@ -129,7 +166,8 @@ Footer
         <p class="text-center mt-5 small-text ">&copy; Silia Cronauer 2022</p>
     </div>
 
-
+    <!-- My Script -->
+    <script src="../JS/script.js"></script>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
