added some styles

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -56,38 +56,74 @@ Home,  Skills, Projects, Contact
 ---------------    
 -->
     <div class="d-flex border-bottom border-dark justify-content-between">
-        <div class="col-4 align-self-center">
-            <h1>Hi There!</h1>
+        <div class="col-3 align-self-center ps-5 name">
+            <h1 class="text-uppercase"> Silia Cronauer</h1>
+            <p>Indipendent Web Developer</p>
+
         </div>
         <div class="hero-image col-8">
             <img src="../images/IMG_2415.jpg">
         </div>
     </div>
 
+
+    <!-- 
+--------------------    
+   About
+--------------------    
+-->
+    <div class="about-container">
+        <div class="row">
+            <div class="col-lg-5">
+                <div class="about-img">
+                    <img src="../images/IMG_3934.JPG" alt="">
+                </div>
+            </div>
+            <div class="col-lg-7 align-self-end text-end mb-5 p-5">
+                <p class="thin-heading"> About me</p>
+                <h3 class="mb-4">Hey I'm Silia!</h3>
+                <p> I'm web designer, and I'm very passionate and dedicated to my work. With 20 years experience as a professional web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the
+                    design process, from discussion and collaboration.</p>
+                <a href="" class="text-uppercase text-dark">Download CV</a>
+            </div>
+        </div>
+    </div>
     <!-- 
 --------------------    
     Services 
 --------------------    
 -->
-    <div class="container service-box">
-        <div class="row d-flex justify-content-between text-center">
-            <div class="col-lg-4 col-sm-12 px-4">
-                <h2>01</h2>
-                <h3>Web Design</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum odit in dolorem aspernatur maxime ab sit quasi reprehenderit eos iure.</p>
-            </div>
-            <div class="col-lg-4 col-sm-12 px-4">
-                <h2>02</h2>
-                <h3>Front-End Development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum odit in dolorem aspernatur maxime ab sit quasi reprehenderit eos iure.</p>
-            </div>
-            <div class="col-lg-4 col-sm-12 px-4">
-                <h2>03</h2>
-                <h3>Back-End Development</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum odit in dolorem aspernatur maxime ab sit quasi reprehenderit eos iure.</p>
+    <div class="bg-services">
+        <div class="container service-box">
+            <div class="row d-flex justify-content-between text-center">
+                <div class="col-lg-4 col-sm-12 px-4">
+                    <h2>01</h2>
+                    <h3>Web Design</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum odit in dolorem aspernatur maxime ab sit quasi reprehenderit eos iure.</p>
+                </div>
+                <div class="col-lg-4 col-sm-12 px-4">
+                    <h2>02</h2>
+                    <h3>Front-End Development</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum odit in dolorem aspernatur maxime ab sit quasi reprehenderit eos iure.</p>
+                </div>
+                <div class="col-lg-4 col-sm-12 px-4">
+                    <h2>03</h2>
+                    <h3>Back-End Development</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum odit in dolorem aspernatur maxime ab sit quasi reprehenderit eos iure.</p>
+                </div>
             </div>
         </div>
     </div>
+
+    <!-- 
+--------------------    
+Image Section
+---------------------
+-->
+    <div class="image-section">
+
+    </div>
+
 
     <!-- 
 --------------------    
@@ -95,15 +131,19 @@ Home,  Skills, Projects, Contact
 ---------------------
 -->
 
+    <!-- Project Section -->
+
+
     <div class="container my-5">
-        <h3>Creative Portfolio</h3>
+        <p class="thin-heading">Portfolio</p>
+        <h3 class="mb-5">Recent Projects</h3>
         <!-- Grid -->
         <div class="portfolio">
             <div class="item">
                 <img src="../images/foodblog.jpg" alt="">
                 <div class="description">
-                    <p>Foodblog</p>
-                    <a href="">See Live Site</a>
+                    <h4>Foodblog</h4>
+                    <a class="live-site" href="">See Live Site</a>
                 </div>
             </div>
             <div class="item">
@@ -129,13 +169,35 @@ Home,  Skills, Projects, Contact
         </div>
     </div>
 
-
+    <!-- Technologies -->
+    <div class="tech d-flex justify-content-around text-uppercase">
+        <div class="text-center"><i class="fa-brands fa-html5 fs-2"></i>
+            <p>html5</p>
+        </div>
+        <div class="text-center"><i class="fa-brands fa-css3-alt fs-2"></i>
+            <p>css</p>
+        </div>
+        <div class="text-center"><i class="fa-brands fa-sass fs-2"></i>
+            <p>scss</p>
+        </div>
+        <div class="text-center"><i class="fa-brands fa-bootstrap fs-2"></i>
+            <p>Bootstrap</p>
+        </div>
+        <div class="text-center"><i class="fa-brands fa-square-js fs-2"></i>
+            <p>Java-script</p>
+        </div>
+        <div class="text-center"><i class="fa-brands fa-angular fs-2"></i>
+            <p>Angular</p>
+        </div>
+    </div>
 
     <!--
 --------------------    
     Contact
 --------------------
 -->
+
+
 
     <!-- 
 -----------------
