--- a/HTML/index.html
+++ b/HTML/index.html
@@ -257,25 +257,21 @@ Footer
 -----------------
 -->
     <div class="bg-black py-4">
-        <ul class="nav d-flex text-light justify-content-center mt-3 small-text">
-            <li>
-                <a href="">Home</a> |
-            </li>
-            <li>
-                <a href="#about">About</a> |
-            </li>
-            <li>
-                <a href="#skills">Skills</a> |
-            </li>
-            <li>
-                <a href="projects">Projects</a> |
-            </li>
-            <li>
-                <a href="contact">Contact</a>
-            </li>
-        </ul>
+        <div class="nav text-light justify-content-around mt-3 small-text nav-footer">
+            <a href="">Home</a>
+            <a href="#about">About</a>
+            <a href="#skills">Skills</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
+        </div>
         <p class="text-center mt-5 small-text text-light">&copy; Silia Cronauer 2022</p>
     </div>
+
+    <!-- 
+-----------------
+Script Tags
+-----------------
+-->
 
     <!-- My Script -->
     <script src="../JS/script.js"></script>
